Clean up CLI