@@ -29,16 +29,10 @@ package org.jenkins.tools.test.model;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Properties;
-import java.util.logging.Logger;
 
 /**
  * POJO used to configure Plugin Compatibility Tester execution
@@ -47,177 +41,100 @@ import java.util.logging.Logger;
  */
 public class PluginCompatTesterConfig {
 
-    private static final Logger LOGGER = Logger.getLogger(PluginCompatTesterConfig.class.getName());
+    // The megawar
+    @NonNull private final File war;
 
     // A working directory where the tested plugin's sources will be checked out
-    public File workDirectory;
+    @NonNull private final File workingDir;
 
-    // Path for maven settings file where repository will be provided allowing to
-    // download jenkins-core artifact (and dependencies)
-    private File m2SettingsFile;
+    // List of plugin artifact ids on which tests will be performed
+    // If empty, tests will be performed on every plugins retrieved from update center
+    @NonNull private List<String> includePlugins = List.of();
 
-    // The megawar
-    private File war;
+    // List of plugin artifact ids on which tests will be not performed
+    // If empty, tests will be performed on every includePlugins found
+    @NonNull private List<String> excludePlugins = List.of();
+
+    // List of hooks that will not be executed
+    // If empty, all hooks will be executed
+    @NonNull private List<String> excludeHooks = List.of();
+
+    // URL to be used as an alternative to download plugin source from fallback
+    // organizations, like your own fork
+    @CheckForNull private String fallbackGitHubOrganization;
 
     @CheckForNull private File externalMaven;
 
-    // List of plugin artifact ids on which tests will be performed
-    // If null, tests will be performed on every plugins retrieved from update center
-    private List<String> includePlugins;
+    // Path for maven settings file where repository will be provided allowing to
+    // download jenkins-core artifact (and dependencies)
+    @CheckForNull private File m2Settings;
 
-    // List of plugin artifact ids on which tests will be not performed
-    // If null, tests will be performed on every includePlugins found
-    private List<String> excludePlugins;
+    @NonNull private Map<String, String> mavenProperties = Map.of();
 
-    // List of hooks that will not be executed
-    // If null, all hooks will be executed
-    private List<String> excludeHooks;
-
-    // URL to be used as an alternative to download plugin source from fallback
-    // organtizations, like your own fork
-    private String fallbackGitHubOrganization;
-
-    private Map<String, String> mavenProperties = Collections.emptyMap();
-    private String mavenPropertiesFile;
-
-    private List<String> mavenArgs = Collections.emptyList();
+    @NonNull private List<String> mavenArgs = List.of();
 
     // Classpath prefixes of the extra hooks
-    private List<String> hookPrefixes = new ArrayList<>(List.of("org.jenkins"));
+    @NonNull private List<String> hookPrefixes = List.of("org.jenkins");
 
     // External hooks jar files path locations
-    private List<File> externalHooksJars = new ArrayList<>();
+    @NonNull private List<File> externalHooksJars = List.of();
 
     // Path for a folder containing a local (possibly modified) clone of a plugin repository
-    private File localCheckoutDir;
+    @CheckForNull private File localCheckoutDir;
 
     // If multiple plugins are specified, fail the overall run after the first plugin failure occurs
     // rather than continuing to test other plugins.
     private boolean failFast;
 
-    /**
-     * @deprecated just for tests; use {@link #PluginCompatTesterConfig()} and call whatever setters
-     *     are actually required
-     */
-    @Deprecated
-    public PluginCompatTesterConfig(File workDirectory, File m2SettingsFile) {
-        setWorkDirectory(workDirectory);
-        setM2SettingsFile(m2SettingsFile);
+    public PluginCompatTesterConfig(@NonNull File war, @NonNull File workingDir) {
+        this.war = war;
+        this.workingDir = workingDir;
     }
 
-    public PluginCompatTesterConfig() {}
-
-    public void setWorkDirectory(File workDirectory) {
-        this.workDirectory = workDirectory;
-    }
-
-    public void setM2SettingsFile(File m2SettingsFile) {
-        this.m2SettingsFile = m2SettingsFile;
-    }
-
-    public List<String> getIncludePlugins() {
-        return includePlugins;
-    }
-
-    public void setIncludePlugins(List<String> pluginsList) {
-        this.includePlugins = pluginsList;
-    }
-
-    public File getM2SettingsFile() {
-        return m2SettingsFile;
-    }
-
-    public List<String> getExcludePlugins() {
-        return excludePlugins;
-    }
-
-    public void setExcludePlugins(List<String> excludePlugins) {
-        this.excludePlugins = excludePlugins;
-    }
-
-    public List<String> getExcludeHooks() {
-        return excludeHooks;
-    }
-
-    public void setExcludeHooks(List<String> excludeHooks) {
-        this.excludeHooks = excludeHooks;
-    }
-
-    public String getFallbackGitHubOrganization() {
-        return fallbackGitHubOrganization;
-    }
-
-    public void setFallbackGitHubOrganization(String fallbackGitHubOrganization) {
-        this.fallbackGitHubOrganization = fallbackGitHubOrganization;
-    }
-
-    public void setMavenProperties(@NonNull Map<String, String> mavenProperties) {
-        this.mavenProperties = new HashMap<>(mavenProperties);
-    }
-
-    /**
-     * Gets a list of Maven properties defined in the configuration. It is not a full list of
-     * properties; {@link #retrieveMavenProperties()} should be used to construct it.
-     */
     @NonNull
-    public Map<String, String> getMavenProperties() {
-        return Collections.unmodifiableMap(mavenProperties);
-    }
-
-    public String getMavenPropertiesFile() {
-        return mavenPropertiesFile;
-    }
-
-    public void setMavenPropertiesFiles(String mavenPropertiesFile) {
-        this.mavenPropertiesFile = mavenPropertiesFile;
-    }
-
-    public List<String> getMavenArgs() {
-        return mavenArgs;
-    }
-
-    public void setMavenArgs(List<String> mavenArgs) {
-        this.mavenArgs = mavenArgs;
-    }
-
-    /**
-     * Retrieves Maven Properties from available sources like {@link #mavenPropertiesFile}.
-     *
-     * @return Map of properties
-     * @throws IOException Property read failure
-     * @since TODO
-     */
-    public Map<String, String> retrieveMavenProperties() throws IOException {
-        Map<String, String> res = new HashMap<>(mavenProperties);
-
-        // Read properties from File
-        if (mavenPropertiesFile != null && !mavenPropertiesFile.isBlank()) {
-            File file = new File(mavenPropertiesFile);
-            if (file.exists() && file.isFile()) {
-                try (FileInputStream fileInputStream = new FileInputStream(file)) {
-                    Properties properties = new Properties();
-                    properties.load(fileInputStream);
-                    for (Map.Entry<Object, Object> entry : properties.entrySet()) {
-                        res.put((String) entry.getKey(), (String) entry.getValue());
-                    }
-                }
-            } else {
-                throw new FileNotFoundException(
-                        "Extra Maven Properties File "
-                                + mavenPropertiesFile
-                                + " does not exist or not a File");
-            }
-        }
-
-        return res;
-    }
-
     public File getWar() {
         return war;
     }
 
-    public void setWar(File war) {
-        this.war = war;
+    @NonNull
+    public File getWorkingDir() {
+        return workingDir;
+    }
+
+    @NonNull
+    public List<String> getIncludePlugins() {
+        return includePlugins;
+    }
+
+    public void setIncludePlugins(@NonNull List<String> includePlugins) {
+        this.includePlugins = List.copyOf(includePlugins);
+    }
+
+    @NonNull
+    public List<String> getExcludePlugins() {
+        return excludePlugins;
+    }
+
+    public void setExcludePlugins(@NonNull List<String> excludePlugins) {
+        this.excludePlugins = List.copyOf(excludePlugins);
+    }
+
+    @NonNull
+    public List<String> getExcludeHooks() {
+        return excludeHooks;
+    }
+
+    public void setExcludeHooks(@NonNull List<String> excludeHooks) {
+        this.excludeHooks = List.copyOf(excludeHooks);
+    }
+
+    @CheckForNull
+    public String getFallbackGitHubOrganization() {
+        return fallbackGitHubOrganization;
+    }
+
+    public void setFallbackGitHubOrganization(@CheckForNull String fallbackGitHubOrganization) {
+        this.fallbackGitHubOrganization = fallbackGitHubOrganization;
     }
 
     @CheckForNull
@@ -225,33 +142,66 @@ public class PluginCompatTesterConfig {
         return externalMaven;
     }
 
-    public void setExternalMaven(File externalMaven) {
+    public void setExternalMaven(@CheckForNull File externalMaven) {
         this.externalMaven = externalMaven;
     }
 
+    @CheckForNull
+    public File getM2Settings() {
+        return m2Settings;
+    }
+
+    public void setM2Settings(@CheckForNull File m2Settings) {
+        this.m2Settings = m2Settings;
+    }
+
+    @NonNull
+    public Map<String, String> getMavenProperties() {
+        return mavenProperties;
+    }
+
+    public void setMavenProperties(@NonNull Map<String, String> mavenProperties) {
+        this.mavenProperties = Collections.unmodifiableMap(mavenProperties);
+    }
+
+    @NonNull
+    public List<String> getMavenArgs() {
+        return mavenArgs;
+    }
+
+    public void setMavenArgs(@NonNull List<String> mavenArgs) {
+        this.mavenArgs = List.copyOf(mavenArgs);
+    }
+
+    @NonNull
     public List<String> getHookPrefixes() {
         return hookPrefixes;
     }
 
+    public void setHookPrefixes(@NonNull List<String> hookPrefixes) {
+        // Want to also process the default
+        List<String> combined = new ArrayList<>();
+        combined.addAll(this.hookPrefixes);
+        combined.addAll(hookPrefixes);
+        this.hookPrefixes = List.copyOf(combined);
+    }
+
+    @NonNull
     public List<File> getExternalHooksJars() {
         return externalHooksJars;
     }
 
-    public void setHookPrefixes(List<String> hookPrefixes) {
-        // Want to also process the default
-        this.hookPrefixes.addAll(hookPrefixes);
+    public void setExternalHooksJars(@NonNull List<File> externalHooksJars) {
+        this.externalHooksJars = List.copyOf(externalHooksJars);
     }
 
-    public void setExternalHooksJars(List<File> externalHooksJars) {
-        this.externalHooksJars = externalHooksJars;
-    }
-
+    @CheckForNull
     public File getLocalCheckoutDir() {
         return localCheckoutDir;
     }
 
-    public void setLocalCheckoutDir(String localCheckoutDir) {
-        this.localCheckoutDir = new File(localCheckoutDir);
+    public void setLocalCheckoutDir(@CheckForNull File localCheckoutDir) {
+        this.localCheckoutDir = localCheckoutDir;
     }
 
     public boolean isFailFast() {
